--- a/client/login.css
+++ b/client/login.css
@@ -81,6 +81,7 @@ body {
     cursor: pointer;
     outline: none;
     opacity: 70%;
+    transition: all 300ms ease;
 }
 
 #username, #password{
@@ -96,5 +97,11 @@ body {
     border-radius: 3px;
     outline: none;
     padding: 0px 0px 5px 5px;
+}
+
+button:hover{
+    filter:brightness(80%);
+    opacity: 0.86;
+    transform:scale(0.9)
 }
 
